--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "echo 'Backend build complete'"
   },
   "keywords": [
     "waste",
@@ -24,5 +25,8 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.34.5"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
